--- a/configuration/template.html
+++ b/configuration/template.html
@@ -183,7 +183,7 @@ td, th {
 </main>
 
 <footer>
-	<p>Made with <a href="https://weblog.lol">weblog.lol</a>.</p>
+	<p>Made with <a href="https://weblog.lol">weblog.lol</a> and published via GitHub.</p>
 </footer>
 
 </body>
